Simplified SetScroll method to show correct textures after change the song mode or hide them if a search don't return songs. Removed or integrated unnecessary methods to do it and added SetRangeVisibility methods to UMenu for reduce the code extension by setting together the visibility of related statics and/or text.

--- a/game/themes/Fantasy.ini
+++ b/game/themes/Fantasy.ini
@@ -928,6 +928,15 @@ Color = ColorLight
 ###  screen song  ###
 #####################
 
+[SongTextNoSongs]
+X = 400
+Y = 300
+Align = 1
+Color = White
+Font = 1
+Size = 50
+Text = ERROR_NO_SONGS
+
 [SongRouletteStatic2PlayersDuetSingerP1]
 X = 35
 Y = 520
@@ -2838,6 +2847,19 @@ Reflection = 0
 ReflectionSpacing = 2
 
 [SongChessboardStatic2]
+X = 10
+Y = 270
+W = 195
+H = 195
+Z = 0.10
+Color = ColorLight
+alpha = 0.45
+Tex = SongSelection2
+Type = Colorized
+Reflection = 0
+ReflectionSpacing = 2
+
+[SongChessboardStatic3]
 X = 750
 Y = 333
 W = 35
@@ -2941,19 +2963,6 @@ Tex = icon_song_rap
 Type = Transparent
 Reflection = 0
 ReflectionSpacing = 22
-
-[SongChessboardStatic3]
-X = 10
-Y = 270
-W = 195
-H = 195
-Z = 0.10
-Color = ColorLight
-alpha = 0.45
-Tex = SongSelection2
-Type = Colorized
-Reflection = 0
-ReflectionSpacing = 2
 
 [SongChessboardTextArtist]
 X = 105
@@ -3793,7 +3802,7 @@ Align = 1
 
 ########## LEGEND CAROUSEL #########
 
-[SongCarouselStaticNonParty3]
+[SongCarouselStaticNonParty1]
 X = 582
 Y = 405
 Z = 0.95
@@ -3804,7 +3813,7 @@ Tex = BGFade
 Color = White
 Type = Transparent
 
-[SongCarouselTextNonParty5]
+[SongCarouselTextNonParty1]
 X = 661
 Y = 410
 Z = 0.952
@@ -3814,7 +3823,7 @@ Size = 14
 Align = 1
 Text = SING_SONG_SELECTION_LEGEND_TITLE
 
-[SongCarouselStaticNonParty4]
+[SongCarouselStaticNonParty2]
 X = 596
 Y = 430
 Z = 0.952
@@ -3825,7 +3834,7 @@ Color = White
 Type = Transparent
 
 
-[SongCarouselTextNonParty6]
+[SongCarouselTextNonParty2]
 X = 625
 Y = 432
 Z = 0.952
@@ -3835,7 +3844,7 @@ Size = 12
 Align = 0
 Text = SING_SONG_SELECTION_LEGEND_VIDEO
 
-[SongCarouselStaticNonParty5]
+[SongCarouselStaticNonParty3]
 X = 595
 Y = 450
 Z = 0.952
@@ -3845,7 +3854,7 @@ Tex = icon_song_medley
 Color = White
 Type = Transparent
 
-[SongCarouselTextNonParty7]
+[SongCarouselTextNonParty3]
 X = 625
 Y = 452
 Z = 0.952
@@ -3855,7 +3864,7 @@ Size = 12
 Align = 0
 Text = SING_SONG_SELECTION_LEGEND_MEDLEY
 
-[SongCarouselStaticNonParty6]
+[SongCarouselStaticNonParty4]
 X = 595
 Y = 470
 Z = 0.952
@@ -3865,7 +3874,7 @@ Tex = icon_song_calcmedley
 Color = White
 Type = Transparent
 
-[SongCarouselTextNonParty8]
+[SongCarouselTextNonParty4]
 X = 625
 Y = 472
 Z = 0.952
@@ -3876,7 +3885,7 @@ Align = 0
 Text = SING_SONG_SELECTION_LEGEND_MEDLEYC
 
 
-[SongCarouselStaticNonParty7]
+[SongCarouselStaticNonParty5]
 X = 595
 Y = 490
 Z = 0.952
@@ -3886,7 +3895,7 @@ Tex = icon_song_duet
 Color = White
 Type = Transparent
 
-[SongCarouselTextNonParty9]
+[SongCarouselTextNonParty5]
 X = 625
 Y = 492
 Z = 0.952
@@ -3975,7 +3984,7 @@ Align = 0
 #        SongTextNonParty[No]
 #Here are the ones for singmode
 
-[SongCarouselTextNonParty1]
+[SongCarouselTextNonParty6]
 X = 30
 Y = 6
 Color = White
@@ -3985,7 +3994,7 @@ Text = SING_SONG_SELECTION
 Align = 0
 
 # Menu opens with [M]
-[SongCarouselStaticNonParty1]
+[SongCarouselStaticNonParty6]
 X = 255
 Y = 560
 W = 25
@@ -3997,7 +4006,7 @@ Type = Transparent
 Reflection = 0
 ReflectionSpacing = 2
 
-[SongCarouselTextNonParty2]
+[SongCarouselTextNonParty7]
 X = 287
 Y = 563
 Z = 0.952
@@ -4010,7 +4019,7 @@ Reflection = 0
 ReflectionSpacing = 13
 
 # The so famous search, shown with [J]
-[SongCarouselStaticNonParty2]
+[SongCarouselStaticNonParty7]
 X = 375
 Y = 560
 W = 25
@@ -4022,7 +4031,7 @@ Type = Transparent
 Reflection = 0
 ReflectionSpacing = 2
 
-[SongCarouselTextNonParty3]
+[SongCarouselTextNonParty8]
 X = 407
 Y = 563
 Z = 0.952
@@ -4047,7 +4056,7 @@ Type = Transparent
 Reflection = 0
 ReflectionSpacing = 2
 
-[SongCarouselTextNonParty4]
+[SongCarouselTextNonParty9]
 X = 612
 Y = 563
 Z = 0.952
@@ -5423,7 +5432,7 @@ Align = 1
 
 ########## LEGEND CAROUSEL #########
 
-[SongSlideStatic3]
+[SongSlideStaticNonParty1]
 X = 582
 Y = 405
 Z = 0.95
@@ -5433,7 +5442,7 @@ Tex = BGFade
 Color = White
 Type = Transparent
 
-[SongSlideTextNonParty5]
+[SongSlideTextNonParty1]
 X = 661
 Y = 410
 Z = 0.952
@@ -5443,7 +5452,7 @@ Size = 14
 Align = 1
 Text = SING_SONG_SELECTION_LEGEND_TITLE
 
-[SongSlideStatic4]
+[SongSlideStaticNonParty2]
 X = 596
 Y = 430
 Z = 0.952
@@ -5454,7 +5463,7 @@ Color = White
 Type = Transparent
 
 
-[SongSlideTextNonParty6]
+[SongSlideTextNonParty2]
 X = 625
 Y = 432
 Z = 0.952
@@ -5464,7 +5473,7 @@ Size = 12
 Align = 0
 Text = SING_SONG_SELECTION_LEGEND_VIDEO
 
-[SongSlideStatic5]
+[SongSlideStaticNonParty3]
 X = 595
 Y = 450
 Z = 0.952
@@ -5474,7 +5483,7 @@ Tex = icon_song_medley
 Color = White
 Type = Transparent
 
-[SongSlideTextNonParty7]
+[SongSlideTextNonParty3]
 X = 625
 Y = 452
 Z = 0.952
@@ -5484,7 +5493,7 @@ Size = 12
 Align = 0
 Text = SING_SONG_SELECTION_LEGEND_MEDLEY
 
-[SongSlideStatic6]
+[SongSlideStaticNonParty4]
 X = 595
 Y = 470
 Z = 0.952
@@ -5494,7 +5503,7 @@ Tex = icon_song_calcmedley
 Color = White
 Type = Transparent
 
-[SongSlideTextNonParty8]
+[SongSlideTextNonParty4]
 X = 625
 Y = 472
 Z = 0.952
@@ -5505,7 +5514,7 @@ Align = 0
 Text = SING_SONG_SELECTION_LEGEND_MEDLEYC
 
 
-[SongSlideStatic7]
+[SongSlideStaticNonParty5]
 X = 595
 Y = 490
 Z = 0.952
@@ -5515,7 +5524,7 @@ Tex = icon_song_duet
 Color = White
 Type = Transparent
 
-[SongSlideTextNonParty9]
+[SongSlideTextNonParty5]
 X = 625
 Y = 492
 Z = 0.952
