--- a/game/themes/Party.ini
+++ b/game/themes/Party.ini
@@ -929,6 +929,15 @@ Color = ColorLight
 ###  screen song  ###
 #####################
 
+[SongTextNoSongs]
+X = 400
+Y = 300
+Align = 1
+Color = White
+Font = 1
+Size = 50
+Text = ERROR_NO_SONGS
+
 [SongRouletteStatic2PlayersDuetSingerP1]
 X = 35
 Y = 520
@@ -2839,6 +2848,19 @@ Reflection = 0
 ReflectionSpacing = 2
 
 [SongChessboardStatic2]
+X = 10
+Y = 270
+W = 195
+H = 195
+Z = 0.10
+Color = ColorLight
+alpha = 0.45
+Tex = SongSelection2
+Type = Colorized
+Reflection = 0
+ReflectionSpacing = 2
+
+[SongChessboardStatic3]
 X = 750
 Y = 333
 W = 35
@@ -2942,19 +2964,6 @@ Tex = icon_song_rap
 Type = Transparent
 Reflection = 0
 ReflectionSpacing = 22
-
-[SongChessboardStatic3]
-X = 10
-Y = 270
-W = 195
-H = 195
-Z = 0.10
-Color = ColorLight
-alpha = 0.45
-Tex = SongSelection2
-Type = Colorized
-Reflection = 0
-ReflectionSpacing = 2
 
 [SongChessboardTextArtist]
 X = 105
@@ -3794,7 +3803,7 @@ Align = 1
 
 ########## LEGEND CAROUSEL #########
 
-[SongCarouselStaticNonParty3]
+[SongCarouselStaticNonParty1]
 X = 582
 Y = 405
 Z = 0.95
@@ -3805,7 +3814,7 @@ Tex = BGFade
 Color = White
 Type = Transparent
 
-[SongCarouselTextNonParty5]
+[SongCarouselTextNonParty1]
 X = 661
 Y = 410
 Z = 0.952
@@ -3815,7 +3824,7 @@ Size = 14
 Align = 1
 Text = SING_SONG_SELECTION_LEGEND_TITLE
 
-[SongCarouselStaticNonParty4]
+[SongCarouselStaticNonParty2]
 X = 596
 Y = 430
 Z = 0.952
@@ -3826,7 +3835,7 @@ Color = White
 Type = Transparent
 
 
-[SongCarouselTextNonParty6]
+[SongCarouselTextNonParty2]
 X = 625
 Y = 432
 Z = 0.952
@@ -3836,7 +3845,7 @@ Size = 12
 Align = 0
 Text = SING_SONG_SELECTION_LEGEND_VIDEO
 
-[SongCarouselStaticNonParty5]
+[SongCarouselStaticNonParty3]
 X = 595
 Y = 450
 Z = 0.952
@@ -3846,7 +3855,7 @@ Tex = icon_song_medley
 Color = White
 Type = Transparent
 
-[SongCarouselTextNonParty7]
+[SongCarouselTextNonParty3]
 X = 625
 Y = 452
 Z = 0.952
@@ -3856,7 +3865,7 @@ Size = 12
 Align = 0
 Text = SING_SONG_SELECTION_LEGEND_MEDLEY
 
-[SongCarouselStaticNonParty6]
+[SongCarouselStaticNonParty4]
 X = 595
 Y = 470
 Z = 0.952
@@ -3866,7 +3875,7 @@ Tex = icon_song_calcmedley
 Color = White
 Type = Transparent
 
-[SongCarouselTextNonParty8]
+[SongCarouselTextNonParty4]
 X = 625
 Y = 472
 Z = 0.952
@@ -3877,7 +3886,7 @@ Align = 0
 Text = SING_SONG_SELECTION_LEGEND_MEDLEYC
 
 
-[SongCarouselStaticNonParty7]
+[SongCarouselStaticNonParty5]
 X = 595
 Y = 490
 Z = 0.952
@@ -3887,7 +3896,7 @@ Tex = icon_song_duet
 Color = White
 Type = Transparent
 
-[SongCarouselTextNonParty9]
+[SongCarouselTextNonParty5]
 X = 625
 Y = 492
 Z = 0.952
@@ -3976,7 +3985,7 @@ Align = 0
 #        SongTextNonParty[No]
 #Here are the ones for singmode
 
-[SongCarouselTextNonParty1]
+[SongCarouselTextNonParty6]
 X = 30
 Y = 6
 Color = White
@@ -3986,7 +3995,7 @@ Text = SING_SONG_SELECTION
 Align = 0
 
 # Menu opens with [M]
-[SongCarouselStaticNonParty1]
+[SongCarouselStaticNonParty6]
 X = 255
 Y = 560
 W = 25
@@ -3998,7 +4007,7 @@ Type = Transparent
 Reflection = 0
 ReflectionSpacing = 2
 
-[SongCarouselTextNonParty2]
+[SongCarouselTextNonParty7]
 X = 287
 Y = 563
 Z = 0.952
@@ -4011,7 +4020,7 @@ Reflection = 0
 ReflectionSpacing = 13
 
 # The so famous search, shown with [J]
-[SongCarouselStaticNonParty2]
+[SongCarouselStaticNonParty7]
 X = 375
 Y = 560
 W = 25
@@ -4023,7 +4032,7 @@ Type = Transparent
 Reflection = 0
 ReflectionSpacing = 2
 
-[SongCarouselTextNonParty3]
+[SongCarouselTextNonParty8]
 X = 407
 Y = 563
 Z = 0.952
@@ -4048,7 +4057,7 @@ Type = Transparent
 Reflection = 0
 ReflectionSpacing = 2
 
-[SongCarouselTextNonParty4]
+[SongCarouselTextNonParty9]
 X = 612
 Y = 563
 Z = 0.952
@@ -5424,7 +5433,7 @@ Align = 1
 
 ########## LEGEND SLIDE #########
 
-[SongSlideStatic3]
+[SongSlideStaticNonParty1]
 X = 582
 Y = 405
 Z = 0.95
@@ -5434,7 +5443,7 @@ Tex = BGFade
 Color = White
 Type = Transparent
 
-[SongSlideTextNonParty5]
+[SongSlideTextNonParty1]
 X = 661
 Y = 410
 Z = 0.952
@@ -5444,7 +5453,7 @@ Size = 14
 Align = 1
 Text = SING_SONG_SELECTION_LEGEND_TITLE
 
-[SongSlideStatic4]
+[SongSlideStaticNonParty2]
 X = 596
 Y = 430
 Z = 0.952
@@ -5455,7 +5464,7 @@ Color = White
 Type = Transparent
 
 
-[SongSlideTextNonParty6]
+[SongSlideTextNonParty2]
 X = 625
 Y = 432
 Z = 0.952
@@ -5465,7 +5474,7 @@ Size = 12
 Align = 0
 Text = SING_SONG_SELECTION_LEGEND_VIDEO
 
-[SongSlideStatic5]
+[SongSlideStaticNonParty3]
 X = 595
 Y = 450
 Z = 0.952
@@ -5475,7 +5484,7 @@ Tex = icon_song_medley
 Color = White
 Type = Transparent
 
-[SongSlideTextNonParty7]
+[SongSlideTextNonParty3]
 X = 625
 Y = 452
 Z = 0.952
@@ -5485,7 +5494,7 @@ Size = 12
 Align = 0
 Text = SING_SONG_SELECTION_LEGEND_MEDLEY
 
-[SongSlideStatic6]
+[SongSlideStaticNonParty4]
 X = 595
 Y = 470
 Z = 0.952
@@ -5495,7 +5504,7 @@ Tex = icon_song_calcmedley
 Color = White
 Type = Transparent
 
-[SongSlideTextNonParty8]
+[SongSlideTextNonParty4]
 X = 625
 Y = 472
 Z = 0.952
@@ -5506,7 +5515,7 @@ Align = 0
 Text = SING_SONG_SELECTION_LEGEND_MEDLEYC
 
 
-[SongSlideStatic7]
+[SongSlideStaticNonParty5]
 X = 595
 Y = 490
 Z = 0.952
@@ -5516,7 +5525,7 @@ Tex = icon_song_duet
 Color = White
 Type = Transparent
 
-[SongSlideTextNonParty9]
+[SongSlideTextNonParty5]
 X = 625
 Y = 492
 Z = 0.952
@@ -5605,7 +5614,7 @@ Align = 0
 #        SongTextNonParty[No]
 #Here are the ones for singmode
 
-[SongSlideTextNonParty1]
+[SongSlideTextNonParty6]
 X = 30
 Y = 6
 Color = White
@@ -5615,7 +5624,7 @@ Text = SING_SONG_SELECTION
 Align = 0
 
 # Menu opens with [M]
-[SongSlideStaticNonParty1]
+[SongSlideStaticNonParty6]
 X = 255
 Y = 560
 W = 25
@@ -5627,7 +5636,7 @@ Type = Transparent
 Reflection = 0
 ReflectionSpacing = 2
 
-[SongSlideTextNonParty2]
+[SongSlideTextNonParty7]
 X = 287
 Y = 563
 Z = 0.952
@@ -5640,7 +5649,7 @@ Reflection = 0
 ReflectionSpacing = 13
 
 # The so famous search, shown with [J]
-[SongSlideStaticNonParty2]
+[SongSlideStaticNonParty7]
 X = 375
 Y = 560
 W = 25
@@ -5652,7 +5661,7 @@ Type = Transparent
 Reflection = 0
 ReflectionSpacing = 2
 
-[SongSlideTextNonParty3]
+[SongSlideTextNonParty8]
 X = 407
 Y = 563
 Z = 0.952
@@ -5665,7 +5674,7 @@ Reflection = 0
 ReflectionSpacing = 13
 
 # [P]laylist
-[SongSlideStaticNonParty3]
+[SongSlideStaticNonParty8]
 X = 580
 Y = 560
 W = 25
@@ -5677,7 +5686,7 @@ Type = Transparent
 Reflection = 0
 ReflectionSpacing = 2
 
-[SongSlideTextNonParty4]
+[SongSlideTextNonParty9]
 X = 612
 Y = 563
 Z = 0.952
