--- a/game/themes/Fantasy.ini
+++ b/game/themes/Fantasy.ini
@@ -18424,7 +18424,6 @@ Y = 130
 W = 250
 H = 40
 SkipX = 10
-
 Color =
 DColor =
 TColor = White
@@ -18433,6 +18432,8 @@ SBGColor = ColorDark
 SBGDColor = Gray
 STColor = White
 STDColor = GrayDark
+ShowArrows = 1
+OneItemOnly = 1
 
 [OptionsGameSelectSongMenu]
 Text = SING_OPTIONS_GAME_SONGMENU
@@ -18445,7 +18446,6 @@ Y = 180
 W = 250
 H = 40
 SkipX = 10
-
 Color =
 DColor =
 TColor = White
@@ -18454,9 +18454,11 @@ SBGColor = ColorDark
 SBGDColor = Gray
 STColor = White
 STDColor = GrayDark
+ShowArrows = 1
+OneItemOnly = 1
 
-[OptionsGameSelectTabs]
-Text = SING_OPTIONS_GAME_TABS
+[OptionsGameSelectDuets]
+Text = SING_OPTIONS_GAME_DUETS
 Tex = MainBar
 Type = Transparent
 TexSBG = SelectBG
@@ -18466,7 +18468,6 @@ Y = 230
 W = 250
 H = 40
 SkipX = 10
-
 Color =
 DColor =
 TColor = White
@@ -18475,9 +18476,11 @@ SBGColor = ColorDark
 SBGDColor = Gray
 STColor = White
 STDColor = GrayDark
+ShowArrows = 1
+OneItemOnly = 1
 
-[OptionsGameSelectSlideSorting]
-Text = SING_OPTIONS_GAME_SORTING
+[OptionsGameSelectTabs]
+Text = SING_OPTIONS_GAME_TABS
 Tex = MainBar
 Type = Transparent
 TexSBG = SelectBG
@@ -18487,7 +18490,6 @@ Y = 280
 W = 250
 H = 40
 SkipX = 10
-
 Color =
 DColor =
 TColor = White
@@ -18496,9 +18498,11 @@ SBGColor = ColorDark
 SBGDColor = Gray
 STColor = White
 STDColor = GrayDark
+ShowArrows = 1
+OneItemOnly = 1
 
-[OptionsGameSelectShowScores]
-Text = SING_OPTIONS_GAME_SHOWSCORES
+[OptionsGameSelectSlideSorting]
+Text = SING_OPTIONS_GAME_SORTING
 Tex = MainBar
 Type = Transparent
 TexSBG = SelectBG
@@ -18508,7 +18512,6 @@ Y = 330
 W = 250
 H = 40
 SkipX = 10
-
 Color =
 DColor =
 TColor = White
@@ -18517,6 +18520,30 @@ SBGColor = ColorDark
 SBGDColor = Gray
 STColor = White
 STDColor = GrayDark
+ShowArrows = 1
+OneItemOnly = 1
+
+[OptionsGameSelectShowScores]
+Text = SING_OPTIONS_GAME_SHOWSCORES
+Tex = MainBar
+Type = Transparent
+TexSBG = SelectBG
+TypeSBG = Transparent
+X = 70
+Y = 380
+W = 250
+H = 40
+SkipX = 10
+Color =
+DColor =
+TColor = White
+TDColor = White
+SBGColor = ColorDark
+SBGDColor = Gray
+STColor = White
+STDColor = GrayDark
+ShowArrows = 1
+OneItemOnly = 1
 
 [OptionsGameSelectJoypad]
 Tex = MainBar
@@ -18525,11 +18552,10 @@ TexSBG = SelectBG
 TypeSBG = Transparent
 Text = SING_OPTIONS_GAME_JOYPAD_SUPPORT
 X = 70
-Y = 380
+Y = 430
 W = 250
 H = 40
 SkipX = 10
-
 Color =
 DColor =
 TColor = White
@@ -18538,10 +18564,12 @@ SBGColor = ColorDark
 SBGDColor = Gray
 STColor = White
 STDColor = GrayDark
+ShowArrows = 1
+OneItemOnly = 1
 
 [OptionsGameButtonExit]
 X = 70
-Y = 440
+Y = 480
 W = 250
 H = 40
 Tex = Button
