--- a/game/themes/Party.ini
+++ b/game/themes/Party.ini
@@ -18425,7 +18425,6 @@ Y = 130
 W = 250
 H = 40
 SkipX = 10
-
 Color =
 DColor =
 TColor = White
@@ -18434,6 +18433,8 @@ SBGColor = ColorDark
 SBGDColor = Gray
 STColor = White
 STDColor = GrayDark
+ShowArrows = 1
+OneItemOnly = 1
 
 [OptionsGameSelectSongMenu]
 Text = SING_OPTIONS_GAME_SONGMENU
@@ -18446,7 +18447,6 @@ Y = 180
 W = 250
 H = 40
 SkipX = 10
-
 Color =
 DColor =
 TColor = White
@@ -18455,9 +18455,11 @@ SBGColor = ColorDark
 SBGDColor = Gray
 STColor = White
 STDColor = GrayDark
+ShowArrows = 1
+OneItemOnly = 1
 
-[OptionsGameSelectTabs]
-Text = SING_OPTIONS_GAME_TABS
+[OptionsGameSelectDuets]
+Text = SING_OPTIONS_GAME_DUETS
 Tex = MainBar
 Type = Transparent
 TexSBG = SelectBG
@@ -18467,7 +18469,6 @@ Y = 230
 W = 250
 H = 40
 SkipX = 10
-
 Color =
 DColor =
 TColor = White
@@ -18476,9 +18477,11 @@ SBGColor = ColorDark
 SBGDColor = Gray
 STColor = White
 STDColor = GrayDark
+ShowArrows = 1
+OneItemOnly = 1
 
-[OptionsGameSelectSlideSorting]
-Text = SING_OPTIONS_GAME_SORTING
+[OptionsGameSelectTabs]
+Text = SING_OPTIONS_GAME_TABS
 Tex = MainBar
 Type = Transparent
 TexSBG = SelectBG
@@ -18488,7 +18491,6 @@ Y = 280
 W = 250
 H = 40
 SkipX = 10
-
 Color =
 DColor =
 TColor = White
@@ -18497,9 +18499,11 @@ SBGColor = ColorDark
 SBGDColor = Gray
 STColor = White
 STDColor = GrayDark
+ShowArrows = 1
+OneItemOnly = 1
 
-[OptionsGameSelectShowScores]
-Text = SING_OPTIONS_GAME_SHOWSCORES
+[OptionsGameSelectSlideSorting]
+Text = SING_OPTIONS_GAME_SORTING
 Tex = MainBar
 Type = Transparent
 TexSBG = SelectBG
@@ -18509,7 +18513,6 @@ Y = 330
 W = 250
 H = 40
 SkipX = 10
-
 Color =
 DColor =
 TColor = White
@@ -18518,6 +18521,30 @@ SBGColor = ColorDark
 SBGDColor = Gray
 STColor = White
 STDColor = GrayDark
+ShowArrows = 1
+OneItemOnly = 1
+
+[OptionsGameSelectShowScores]
+Text = SING_OPTIONS_GAME_SHOWSCORES
+Tex = MainBar
+Type = Transparent
+TexSBG = SelectBG
+TypeSBG = Transparent
+X = 70
+Y = 380
+W = 250
+H = 40
+SkipX = 10
+Color =
+DColor =
+TColor = White
+TDColor = White
+SBGColor = ColorDark
+SBGDColor = Gray
+STColor = White
+STDColor = GrayDark
+ShowArrows = 1
+OneItemOnly = 1
 
 [OptionsGameSelectJoypad]
 Tex = MainBar
@@ -18526,11 +18553,10 @@ TexSBG = SelectBG
 TypeSBG = Transparent
 Text = SING_OPTIONS_GAME_JOYPAD_SUPPORT
 X = 70
-Y = 380
+Y = 430
 W = 250
 H = 40
 SkipX = 10
-
 Color =
 DColor =
 TColor = White
@@ -18539,10 +18565,12 @@ SBGColor = ColorDark
 SBGDColor = Gray
 STColor = White
 STDColor = GrayDark
+ShowArrows = 1
+OneItemOnly = 1
 
 [OptionsGameButtonExit]
 X = 70
-Y = 440
+Y = 480
 W = 250
 H = 40
 Tex = Button
