Added statics heritage and PaddingX and PaddingY attributes to the texture to print repetitive statics like jokers, defining only the most of things one time

--- a/game/themes/Fantasy.ini
+++ b/game/themes/Fantasy.ini
@@ -638,6 +638,22 @@ STDColor = GrayDark
 #####  S O N G   S E L E C T I O N  #####
 #########################################
 
+[SongStaticTeamJoker]
+Tex = Joker
+X = 505
+Y = 400
+W = 35
+H = 40
+Z = 0.98
+PaddingX = 15
+PaddingY = 10
+Color = P1Dark
+Type = Colorized
+TexX1 = 0
+TexY1 = 0
+TexX2 = 1
+TexY2 = 1
+
 [SongMenu]
 
 [SongMenuBackground]
@@ -2474,215 +2490,8 @@ Text = PARTY_SONG_WHEREAMI
 #variable statics end
 
 # Jokers, 5 for each team, only shown in party Mode
-[SongRouletteStaticTeam1Joker1]
-Tex = Joker
-X = 505
-Y = 400
-W = 35
-H = 40
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongRouletteStaticTeam1Joker2]
-Tex = Joker
-X = 555
-Y = 400
-W = 35
-H = 40
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongRouletteStaticTeam1Joker3]
-Tex = Joker
-X = 605
-Y = 400
-W = 35
-H = 40
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongRouletteStaticTeam1Joker4]
-Tex = Joker
-X = 655
-Y = 400
-W = 35
-H = 40
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongRouletteStaticTeam1Joker5]
-Tex = Joker
-X = 705
-Y = 400
-W = 35
-H = 40
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongRouletteStaticTeam2Joker1]
-Tex = Joker
-X = 505
-Y = 450
-W = 35
-H = 40
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongRouletteStaticTeam2Joker2]
-Tex = Joker
-X = 555
-Y = 450
-W = 35
-H = 40
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongRouletteStaticTeam2Joker3]
-Tex = Joker
-X = 605
-Y = 450
-W = 35
-H = 40
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongRouletteStaticTeam2Joker4]
-Tex = Joker
-X = 655
-Y = 450
-W = 35
-H = 40
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongRouletteStaticTeam2Joker5]
-Tex = Joker
-X = 705
-Y = 450
-W = 35
-H = 40
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongRouletteStaticTeam3Joker1]
-Tex = Joker
-X = 505
-Y = 500
-W = 35
-H = 40
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongRouletteStaticTeam3Joker2]
-Tex = Joker
-X = 555
-Y = 500
-W = 35
-H = 40
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongRouletteStaticTeam3Joker3]
-Tex = Joker
-X = 605
-Y = 500
-W = 35
-H = 40
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongRouletteStaticTeam3Joker4]
-Tex = Joker
-X = 655
-Y = 500
-W = 35
-H = 40
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongRouletteStaticTeam3Joker5]
-Tex = Joker
-X = 705
-Y = 500
-W = 35
-H = 40
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
+[SongRouletteStaticTeamJoker]
+Heritage = SongStaticTeamJoker
 
 [SongRouletteTextPartyTime]
 X = 750
@@ -3330,215 +3139,12 @@ Color = White
 Text = PARTY_MODE
 
 # Jokers, 5 for each team, only shown in party Mode
-[SongChessboardStaticTeam1Joker1]
-Tex = Joker
+[SongChessboardStaticTeamJoker]
+Heritage = SongStaticTeamJoker
 X = 565
 Y = 489
 W = 25
 H = 28
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongChessboardStaticTeam1Joker2]
-Tex = Joker
-X = 600
-Y = 489
-W = 25
-H = 28
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongChessboardStaticTeam1Joker3]
-Tex = Joker
-X = 635
-Y = 489
-W = 25
-H = 28
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongChessboardStaticTeam1Joker4]
-Tex = Joker
-X = 670
-Y = 489
-W = 25
-H = 28
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongChessboardStaticTeam1Joker5]
-Tex = Joker
-X = 705
-Y = 489
-W = 25
-H = 28
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongChessboardStaticTeam2Joker1]
-Tex = Joker
-X = 565
-Y = 526
-W = 25
-H = 28
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongChessboardStaticTeam2Joker2]
-Tex = Joker
-X = 600
-Y = 526
-W = 25
-H = 28
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongChessboardStaticTeam2Joker3]
-Tex = Joker
-X = 635
-Y = 526
-W = 25
-H = 28
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongChessboardStaticTeam2Joker4]
-Tex = Joker
-X = 670
-Y = 526
-W = 25
-H = 28
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongChessboardStaticTeam2Joker5]
-Tex = Joker
-X = 705
-Y = 526
-W = 25
-H = 28
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongChessboardStaticTeam3Joker1]
-Tex = Joker
-X = 565
-Y = 561
-W = 25
-H = 28
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongChessboardStaticTeam3Joker2]
-Tex = Joker
-X = 600
-Y = 561
-W = 25
-H = 28
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongChessboardStaticTeam3Joker3]
-Tex = Joker
-X = 635
-Y = 561
-W = 25
-H = 28
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongChessboardStaticTeam3Joker4]
-Tex = Joker
-X = 670
-Y = 561
-W = 25
-H = 28
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongChessboardStaticTeam3Joker5]
-Tex = Joker
-X = 705
-Y = 561
-W = 25
-H = 28
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
 
 [SongChessboardTextPartyTime]
 X = 750
@@ -4129,215 +3735,8 @@ Color = White
 Text = PARTY_MODE
 
 # Jokers, 5 for each team, only shown in party Mode
-[SongCarouselStaticTeam1Joker1]
-Tex = Joker
-X = 505
-Y = 400
-W = 35
-H = 40
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongCarouselStaticTeam1Joker2]
-Tex = Joker
-X = 555
-Y = 400
-W = 35
-H = 40
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongCarouselStaticTeam1Joker3]
-Tex = Joker
-X = 605
-Y = 400
-W = 35
-H = 40
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongCarouselStaticTeam1Joker4]
-Tex = Joker
-X = 655
-Y = 400
-W = 35
-H = 40
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongCarouselStaticTeam1Joker5]
-Tex = Joker
-X = 705
-Y = 400
-W = 35
-H = 40
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongCarouselStaticTeam2Joker1]
-Tex = Joker
-X = 505
-Y = 450
-W = 35
-H = 40
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongCarouselStaticTeam2Joker2]
-Tex = Joker
-X = 555
-Y = 450
-W = 35
-H = 40
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongCarouselStaticTeam2Joker3]
-Tex = Joker
-X = 605
-Y = 450
-W = 35
-H = 40
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongCarouselStaticTeam2Joker4]
-Tex = Joker
-X = 655
-Y = 450
-W = 35
-H = 40
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongCarouselStaticTeam2Joker5]
-Tex = Joker
-X = 705
-Y = 450
-W = 35
-H = 40
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongCarouselStaticTeam3Joker1]
-Tex = Joker
-X = 505
-Y = 500
-W = 35
-H = 40
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongCarouselStaticTeam3Joker2]
-Tex = Joker
-X = 555
-Y = 500
-W = 35
-H = 40
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongCarouselStaticTeam3Joker3]
-Tex = Joker
-X = 605
-Y = 500
-W = 35
-H = 40
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongCarouselStaticTeam3Joker4]
-Tex = Joker
-X = 655
-Y = 500
-W = 35
-H = 40
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongCarouselStaticTeam3Joker5]
-Tex = Joker
-X = 705
-Y = 500
-W = 35
-H = 40
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
+[SongCarouselStaticTeamJoker]
+Heritage = SongStaticTeamJoker
 
 [SongCarouselTextPartyTime]
 X = 750
@@ -4928,215 +4327,8 @@ Color = White
 Text = PARTY_MODE
 
 # Jokers, 5 for each team, only shown in party Mode
-[SongSlotMachineStaticTeam1Joker1]
-Tex = Joker
-X = 505
-Y = 400
-W = 35
-H = 40
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongSlotMachineStaticTeam1Joker2]
-Tex = Joker
-X = 555
-Y = 400
-W = 35
-H = 40
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongSlotMachineStaticTeam1Joker3]
-Tex = Joker
-X = 605
-Y = 400
-W = 35
-H = 40
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongSlotMachineStaticTeam1Joker4]
-Tex = Joker
-X = 655
-Y = 400
-W = 35
-H = 40
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongSlotMachineStaticTeam1Joker5]
-Tex = Joker
-X = 705
-Y = 400
-W = 35
-H = 40
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongSlotMachineStaticTeam2Joker1]
-Tex = Joker
-X = 505
-Y = 450
-W = 35
-H = 40
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongSlotMachineStaticTeam2Joker2]
-Tex = Joker
-X = 555
-Y = 450
-W = 35
-H = 40
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongSlotMachineStaticTeam2Joker3]
-Tex = Joker
-X = 605
-Y = 450
-W = 35
-H = 40
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongSlotMachineStaticTeam2Joker4]
-Tex = Joker
-X = 655
-Y = 450
-W = 35
-H = 40
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongSlotMachineStaticTeam2Joker5]
-Tex = Joker
-X = 705
-Y = 450
-W = 35
-H = 40
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongSlotMachineStaticTeam3Joker1]
-Tex = Joker
-X = 505
-Y = 500
-W = 35
-H = 40
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongSlotMachineStaticTeam3Joker2]
-Tex = Joker
-X = 555
-Y = 500
-W = 35
-H = 40
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongSlotMachineStaticTeam3Joker3]
-Tex = Joker
-X = 605
-Y = 500
-W = 35
-H = 40
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongSlotMachineStaticTeam3Joker4]
-Tex = Joker
-X = 655
-Y = 500
-W = 35
-H = 40
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongSlotMachineStaticTeam3Joker5]
-Tex = Joker
-X = 705
-Y = 500
-W = 35
-H = 40
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
+[SongSlotMachineStaticTeamJoker]
+Heritage = SongStaticTeamJoker
 
 [SongSlotMachineTextPartyTime]
 X = 750
@@ -5430,7 +4622,7 @@ Color = White
 Size = 20
 Align = 1
 
-########## LEGEND CAROUSEL #########
+########## LEGEND SLIDE #########
 
 [SongSlideStaticNonParty1]
 X = 582
@@ -5798,215 +4990,8 @@ Text = PARTY_SONG_WHEREAMI
 #variable statics end
 
 # Jokers, 5 for each team, only shown in party Mode
-[SongSlideStaticTeam1Joker1]
-Tex = Joker
-X = 505
-Y = 400
-W = 40
-H = 40
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongSlideStaticTeam1Joker2]
-Tex = Joker
-X = 555
-Y = 400
-W = 40
-H = 40
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongSlideStaticTeam1Joker3]
-Tex = Joker
-X = 605
-Y = 400
-W = 40
-H = 40
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongSlideStaticTeam1Joker4]
-Tex = Joker
-X = 655
-Y = 400
-W = 40
-H = 40
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongSlideStaticTeam1Joker5]
-Tex = Joker
-X = 705
-Y = 400
-W = 40
-H = 40
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongSlideStaticTeam2Joker1]
-Tex = Joker
-X = 505
-Y = 450
-W = 40
-H = 40
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongSlideStaticTeam2Joker2]
-Tex = Joker
-X = 555
-Y = 450
-W = 40
-H = 40
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongSlideStaticTeam2Joker3]
-Tex = Joker
-X = 605
-Y = 450
-W = 40
-H = 40
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongSlideStaticTeam2Joker4]
-Tex = Joker
-X = 655
-Y = 450
-W = 40
-H = 40
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongSlideStaticTeam2Joker5]
-Tex = Joker
-X = 705
-Y = 450
-W = 40
-H = 40
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongSlideStaticTeam3Joker1]
-Tex = Joker
-X = 505
-Y = 500
-W = 40
-H = 40
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongSlideStaticTeam3Joker2]
-Tex = Joker
-X = 555
-Y = 500
-W = 40
-H = 40
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongSlideStaticTeam3Joker3]
-Tex = Joker
-X = 605
-Y = 500
-W = 40
-H = 40
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongSlideStaticTeam3Joker4]
-Tex = Joker
-X = 655
-Y = 500
-W = 40
-H = 40
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongSlideStaticTeam3Joker5]
-Tex = Joker
-X = 705
-Y = 500
-W = 40
-H = 40
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
+[SongSlideStaticTeamJoker]
+Heritage = SongStaticTeamJoker
 
 [SongSlideTextPartyTime]
 X = 750
@@ -6664,215 +5649,10 @@ Text = PARTY_SONG_WHEREAMI
 #variable statics end
 
 # Jokers, 5 for each team, only shown in party Mode
-[SongListStaticTeam1Joker1]
-Tex = Joker
-X = 505
-Y = 400
-W = 40
-H = 40
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongListStaticTeam1Joker2]
-Tex = Joker
-X = 555
-Y = 400
-W = 40
-H = 40
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongListStaticTeam1Joker3]
-Tex = Joker
-X = 605
-Y = 400
-W = 40
-H = 40
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongListStaticTeam1Joker4]
-Tex = Joker
-X = 655
-Y = 400
-W = 40
-H = 40
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongListStaticTeam1Joker5]
-Tex = Joker
-X = 705
-Y = 400
-W = 40
-H = 40
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongListStaticTeam2Joker1]
-Tex = Joker
-X = 505
-Y = 450
-W = 40
-H = 40
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongListStaticTeam2Joker2]
-Tex = Joker
-X = 555
-Y = 450
-W = 40
-H = 40
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongListStaticTeam2Joker3]
-Tex = Joker
-X = 605
-Y = 450
-W = 40
-H = 40
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongListStaticTeam2Joker4]
-Tex = Joker
-X = 655
-Y = 450
-W = 40
-H = 40
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongListStaticTeam2Joker5]
-Tex = Joker
-X = 705
-Y = 450
-W = 40
-H = 40
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongListStaticTeam3Joker1]
-Tex = Joker
-X = 505
-Y = 500
-W = 40
-H = 40
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongListStaticTeam3Joker2]
-Tex = Joker
-X = 555
-Y = 500
-W = 40
-H = 40
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongListStaticTeam3Joker3]
-Tex = Joker
-X = 605
-Y = 500
-W = 40
-H = 40
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongListStaticTeam3Joker4]
-Tex = Joker
-X = 655
-Y = 500
-W = 40
-H = 40
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongListStaticTeam3Joker5]
-Tex = Joker
-X = 705
-Y = 500
-W = 40
-H = 40
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
+[SongListStaticTeamJoker]
+Heritage = SongStaticTeamJoker
+X = 550
+Y = 175
 
 [SongListTextPartyTime]
 X = 750
@@ -7527,215 +6307,10 @@ Text = PARTY_SONG_WHEREAMI
 #variable statics end
 
 # Jokers, 5 for each team, only shown in party Mode
-[SongMosaicStaticTeam1Joker1]
-Tex = Joker
-X = 505
-Y = 400
-W = 40
-H = 40
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongMosaicStaticTeam1Joker2]
-Tex = Joker
+[SongMosaicStaticTeamJoker]
+Heritage = SongStaticTeamJoker
 X = 555
-Y = 400
-W = 40
-H = 40
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongMosaicStaticTeam1Joker3]
-Tex = Joker
-X = 605
-Y = 400
-W = 40
-H = 40
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongMosaicStaticTeam1Joker4]
-Tex = Joker
-X = 655
-Y = 400
-W = 40
-H = 40
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongMosaicStaticTeam1Joker5]
-Tex = Joker
-X = 705
-Y = 400
-W = 40
-H = 40
-Z = 0.98
-Color = P1Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongMosaicStaticTeam2Joker1]
-Tex = Joker
-X = 505
-Y = 450
-W = 40
-H = 40
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongMosaicStaticTeam2Joker2]
-Tex = Joker
-X = 555
-Y = 450
-W = 40
-H = 40
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongMosaicStaticTeam2Joker3]
-Tex = Joker
-X = 605
-Y = 450
-W = 40
-H = 40
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongMosaicStaticTeam2Joker4]
-Tex = Joker
-X = 655
-Y = 450
-W = 40
-H = 40
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongMosaicStaticTeam2Joker5]
-Tex = Joker
-X = 705
-Y = 450
-W = 40
-H = 40
-Z = 0.98
-Color = P2Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongMosaicStaticTeam3Joker1]
-Tex = Joker
-X = 505
-Y = 500
-W = 40
-H = 40
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongMosaicStaticTeam3Joker2]
-Tex = Joker
-X = 555
-Y = 500
-W = 40
-H = 40
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongMosaicStaticTeam3Joker3]
-Tex = Joker
-X = 605
-Y = 500
-W = 40
-H = 40
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongMosaicStaticTeam3Joker4]
-Tex = Joker
-X = 655
-Y = 500
-W = 40
-H = 40
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
-
-[SongMosaicStaticTeam3Joker5]
-Tex = Joker
-X = 705
-Y = 500
-W = 40
-H = 40
-Z = 0.98
-Color = P3Dark
-Type = Colorized
-TexX1 = 0
-TexY1 = 0
-TexX2 = 1
-TexY2 = 1
+Y = 370
 
 [SongMosaicTextPartyTime]
 X = 750
