--- a/dists/lazarus/ultrastardx-win.lpi
+++ b/dists/lazarus/ultrastardx-win.lpi
@@ -269,7 +269,7 @@
         <IsPartOfProject Value="True"/>
       </Unit62>
       <Unit63>
-        <Filename Value="screens\UScreenName.pas"/>
+        <Filename Value="screens\UScreenPlayerSelector.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit63>
       <Unit64>
