Added inheritance to buttons, in this case applied to main menu buttons

--- a/game/themes/Fantasy.ini
+++ b/game/themes/Fantasy.ini
@@ -69,194 +69,124 @@ Size = 30
 Align = 1
 Text =
 
+[MainButton]
+W = 110
+H = 130
+Color = White
+DColor = White
+Type = Transparent
+Texts = 1
+Reflection = 1
+ReflectionSpacing = 0
+Fade = 1
+FadeText = 1
+SelectH = 115
+FadeTex = ButtonFade
+FadeTexPos = 0
+
+[MainButtonText]
+Font = 0
+Size = 0
+Align = 1
+Color = White
+
 [MainButtonSolo]
+Inheritance = MainButton
 X = 135
 Y = 125
-W = 110
-H = 130
 Tex = ButtonSolo
-Color = White
-DColor = White
-Type = Transparent
-Texts = 1
-Reflection = 1
-ReflectionSpacing = 0
-Fade = 1
-FadeText = 1
-SelectH = 115
-FadeTex = ButtonFade
-FadeTexPos = 0
 
 [MainButtonSoloText1]
+Inheritance = MainButtonText
 X = 75
 Y = 10
-Font = 0
-Size = 0
-Align = 1
 Text = SING_SING
-Color = White
 
 [MainButtonMulti]
+Inheritance = MainButton
 X = 340
 Y = 125
-W = 110
-H = 130
 Tex = ButtonParty
-Color = White
-DColor = White
-Type = Transparent
-Texts = 1
-Reflection = 1
-ReflectionSpacing = 0
-Fade = 1
-FadeText = 1
-SelectH = 115
-FadeTex = ButtonFade
-FadeTexPos = 0
 
 [MainButtonMultiText1]
+Inheritance = MainButtonText
 X = 75
 Y = 10
-Font = 0
-Size = 0
-Align = 1
 Text = SING_MULTI
-Color = White
 
 [MainButtonJukebox]
+Inheritance = MainButton
 X = 515
 Y = 135
-W = 90
-H = 120
 Tex = ButtonJukebox
-Color = White
-DColor = White
-Type = Transparent
-Texts = 1
-Reflection = 1
-ReflectionSpacing = 0
-Fade = 1
-FadeText = 1
-SelectH = 110
-FadeTex = ButtonFade
-FadeTexPos = 0
 
 [MainButtonJukeboxText1]
+Inheritance = MainButtonText
 X = 45
 Y = 575
-Font = 0
-Size = 30
-Align = 1
 Text = SING_JUKEBOX
-Color = White
 
 [MainButtonStats]
+Inheritance = MainButton
 X = 170
 Y = 345
 W = 80
 H = 115
 Tex = ButtonStats
-Color = White
-DColor = White
-Type = Transparent
-Texts = 1
-Reflection = 1
-ReflectionSpacing = 0
-Fade = 1
-FadeText = 1
 SelectH = 95
-FadeTex = ButtonFade
-FadeTexPos = 0
 
 [MainButtonStatsText1]
+Inheritance = MainButtonText
 X = 70
 Y = 3
-Font = 0
-Size = 0
-Align = 1
 Text = SING_STATS
-Color = White
 
 [MainButtonOptions]
+Inheritance = MainButton
 X = 340
 Y = 345
 W = 90
 H = 115
 Tex = ButtonOption
-Color = White
-DColor = White
-Type = Transparent
-Texts = 1
-Reflection = 1
 ReflectionSpacing = 10
-Fade = 1
-FadeText = 1
 SelectH = 100
-FadeTex = ButtonFade
-FadeTexPos = 0
 
 [MainButtonOptionsText1]
+Inheritance = MainButtonText
 X = 70
 Y = 3
-Font = 0
-Size = 0
-Align = 1
 Text = SING_OPTIONS
-Color = White
 
 [MainButtonExit]
+Inheritance = MainButton
 X = 525
 Y = 350
 W = 80
 H = 110
 Tex = ButtonExit
-Color = White
-DColor = White
-Type = Transparent
-Texts = 1
-Reflection = 1
-ReflectionSpacing = 0
-Fade = 1
-FadeText = 1
 SelectH = 95
-FadeTex = ButtonFade
-FadeTexPos = 0
 
 [MainButtonExitText1]
+Inheritance = MainButtonText
 X = 75
 Y = 10
-Font = 0
-Size = 0
-Align = 1
 Text = SING_EXIT
-Color = White
 
 [MainButtonAbout]
+Inheritance = MainButton
 X = 12
 Y = 535
 W = 40
 H = 50
 Tex = ButtonAbout
-Color = White
-DColor = White
-Type = Transparent
-Texts = 1
 Reflection = 0
-ReflectionSpacing = 0
-Fade = 1
-FadeText = 1
 SelectH = 40
-FadeTex = ButtonFade
-FadeTexPos = 0
 
 [MainButtonAboutText1]
+Inheritance = MainButtonText
 X = 30
 Y = 50
-Font = 0
-Size = 0
-Align = 1
 Text = SING_ABOUT
-Color = White
 
 [MainProgressSongsText]
 X = 400
