Added inheritance to equalizer

--- a/game/themes/Fantasy.ini
+++ b/game/themes/Fantasy.ini
@@ -999,15 +999,15 @@ Rows = 1
 Cols = 5
 Reflections = 1
 
-[SongRouletteEqualizer]
+[SongEqualizer]
 Visible = 1
 Direction = 1
 Color = White
 Alpha = 1
 X = 265
 Y = 476
-PieceW = 4
-PieceH = 4
+W = 4
+H = 4
 Space = 1
 Bands = 5
 Length = 15
@@ -1073,6 +1073,8 @@ Tex = icon_song_rap
 Type = Transparent
 Reflection = 0
 ReflectionSpacing = 22
+[SongRouletteEqualizer]
+Inheritance = SongEqualizer
 
 [SongRouletteStatic1]
 X = 278
@@ -1725,19 +1727,12 @@ Reflections = 0
 Tex = PlayerNumberBox
 
 [SongChessboardEqualizer]
+Inheritance = SongEqualizer
 Visible = 0
-Direction = 1
-Color = White
-Alpha = 1
 X = 745
 Y = 570
-PieceW = 4
-PieceH = 4
-Space = 1
 Bands = 8
 Length = 30
-Reflection = 1
-ReflectionSpacing = 2
 
 [SongChessboardMedleyIcon]
 X = 40
@@ -2373,19 +2368,8 @@ Padding = 60
 Reflections = 1
 
 [SongCarouselEqualizer]
-Visible = 1
-Direction = 1
-Color = White
-Alpha = 1
-X = 265
+Inheritance = SongEqualizer
 Y = 500
-PieceW = 4
-PieceH = 4
-Space = 1
-Bands = 5
-Length = 15
-Reflection = 1
-ReflectionSpacing = 2
 
 [SongCarouselMedleyIcon]
 X = 335
@@ -3040,17 +3024,13 @@ Rows = 3
 Cols = 1
 
 [SongSlotMachineEqualizer]
-Visible = 1
-Direction = 1
-Color = White
-Alpha = 1
+Inheritance = SongEqualizer
 X = 580
 Y = 380
 PieceW = 3
 PieceH = 3
 Space = 1
 Bands = 30
-Length = 15
 
 [SongSlotMachineMedleyIcon]
 X = 315
@@ -3709,19 +3689,8 @@ Reflections = 1
 ReflectionSpacing = 10
 
 [SongSlideEqualizer]
-Visible = 1
-Direction = 1
-Color = White
-Alpha = 1
-X = 265
+Inheritance = SongEqualizer
 Y = 500
-PieceW = 4
-PieceH = 4
-Space = 1
-Bands = 5
-Length = 15
-Reflection = 1
-ReflectionSpacing = 2
 
 [SongSlideMedleyIcon]
 X = 335
@@ -4443,15 +4412,10 @@ Padding = 12
 Reflections = 0
 
 [SongListEqualizer]
+Inheritance = SongEqualizer
 Visible = 0
-Direction = 1
-Color = White
-Alpha = 1
 X = 750
 Y = 505
-PieceW = 4
-PieceH = 4
-Space = 1
 Bands = 7
 Length = 15
 Reflection = 0
@@ -5169,19 +5133,13 @@ Padding = 4
 Reflections = 0
 
 [SongMosaicEqualizer]
-Visible = 1
-Direction = 1
-Color = White
-Alpha = 1
+Inheritance = SongEqualizer
 X = 15
 Y = 500
 PieceW = 5
 PieceH = 5
 Space = 1
-Bands = 4
 Length = 18
-Reflection = 1
-ReflectionSpacing = 2
 
 [SongMosaicMedleyIcon]
 X = 500
